# Functional-Programming

backend/: Cargo.toml
backend/src/: lib.rs  main.rs  worker.rs
backend/src/routes/: mod.rs  watermark.rs
backend/src/services/: watermark_service.rs
backend/src/utils/: error.rs  image_ops.rs  mod.rs
frontend/: package-lock.json  package.json
frontend/src/: App.vue
